# public/swagger.json
@@ -28,7 +28,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Secteur d'activité"
+                                    "$ref": "#/components/schemas/Activity"
                                 }
                             }
                         }
@@ -54,7 +54,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Secteur d'activité"
+                                    "$ref": "#/components/schemas/Activity"
                                 }
                             }
                         }
@@ -83,7 +83,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Secteur d'activité"
+                                    "$ref": "#/components/schemas/Activity"
                                 }
                             }
                         }
@@ -109,7 +109,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Secteur d'activité"
+                                    "$ref": "#/components/schemas/Activity"
                                 }
                             }
                         }
@@ -135,7 +135,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Secteur d'activité"
+                                    "$ref": "#/components/schemas/Activity"
                                 }
                             }
                         }
@@ -159,7 +159,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Liste des Secteurs d'activité",
+                        "description": "Résume des Secteurs d'activité",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -972,7 +972,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Permis"
+                                    "$ref": "#/components/schemas/License"
                                 }
                             }
                         }
@@ -998,7 +998,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Permis"
+                                    "$ref": "#/components/schemas/License"
                                 }
                             }
                         }
@@ -1027,7 +1027,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Permis"
+                                    "$ref": "#/components/schemas/License"
                                 }
                             }
                         }
@@ -1053,7 +1053,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Permis"
+                                    "$ref": "#/components/schemas/License"
                                 }
                             }
                         }
@@ -1079,7 +1079,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Permis"
+                                    "$ref": "#/components/schemas/License"
                                 }
                             }
                         }
@@ -1132,7 +1132,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Ecole"
+                                    "$ref": "#/components/schemas/School"
                                 }
                             }
                         }
@@ -1158,7 +1158,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Ecole"
+                                    "$ref": "#/components/schemas/School"
                                 }
                             }
                         }
@@ -1187,7 +1187,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Ecole"
+                                    "$ref": "#/components/schemas/School"
                                 }
                             }
                         }
@@ -1213,7 +1213,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Ecole"
+                                    "$ref": "#/components/schemas/School"
                                 }
                             }
                         }
@@ -1239,7 +1239,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Ecole"
+                                    "$ref": "#/components/schemas/School"
                                 }
                             }
                         }
@@ -1291,7 +1291,7 @@
                 },
                 "type": "object"
             },
-            "Secteur d'activité": {
+            "Activity": {
                 "description": "Notre Secteur d'activité",
                 "properties": {
                     "id": {
@@ -1361,7 +1361,7 @@
                         "items": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/components/schemas/Permis"
+                                "$ref": "#/components/schemas/License"
                             }
                         }
                     },
@@ -1369,7 +1369,7 @@
                         "items": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/components/schemas/Ecole"
+                                "$ref": "#/components/schemas/School"
                             }
                         }
                     },
@@ -1426,7 +1426,7 @@
                         "items": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/components/schemas/Secteur d'activité"
+                                "$ref": "#/components/schemas/Activity"
                             }
                         }
                     }
@@ -1558,7 +1558,7 @@
                 },
                 "type": "object"
             },
-            "Permis": {
+            "License": {
                 "description": "Notre Permis",
                 "properties": {
                     "id": {
@@ -1589,7 +1589,7 @@
                 },
                 "type": "object"
             },
-            "Ecole": {
+            "School": {
                 "description": "Notre Ecole",
                 "properties": {
                     "id": {
